GH-553 Implement RawDataProvider for DK Energinet
Extracted Mvp1ConsumptionRecordProvider into dedicated class and modified API call for easier extension for future CIM document conversation.